# offline-photo-sorter

./: .gitignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
docs/: token_usage_log.md
src/photo_sorter/: __init__.py  core.py  gui.py  network_guard.py
tests/: test_core.py  test_network_guard.py
tools/: build_exe.ps1  dev_checkpoint.ps1  run_app.ps1  run_tests.ps1
